# FreeCAD

./: BuildAll.bat  CMakeLists.txt
data/tests/Jt/Engine/: 2_Cylinder_Engine3_MinEx.plmxml  2_Cylinder_Engine3_MinEx2.plmxml
src/App/: Application.cpp  CMakeLists.txt  CacheObject.cpp  CacheObject.h  Document.cpp  Document.h  DocumentGraph.cpp  DocumentGraph.h  DocumentObject.cpp  DocumentObject.h  DocumentObjectPy.xml  DocumentObjectPyImp.cpp  DocumentPy.xml  DocumentPyImp.cpp  FeatureTest.h  GeoFeature.h  GeoFeatureGroup.cpp  Part.cpp  Part.h  Plane.cpp  Plane.h  PropertyContainer.cpp  PropertyLinks.cpp  PropertyLinks.h  PropertyStandard.h
src/Base/: Exception.h  Reader.cpp  Uuid.h
src/Gui/: Application.cpp  Application.h  ApplicationPy.cpp  CMakeLists.txt  CoinRiftWidget.cpp  CoinRiftWidget.h  CombiView.cpp  Command.cpp  Command.h  CommandDoc.cpp  Control.cpp  DlgCheckableMessageBox.cpp  DlgCheckableMessageBox.h  Document.cpp  Document.h  GraphvizView.cpp  MDIView.cpp  MDIView.h  MainWindow.cpp  Qt4All.h  Selection.cpp  Selection.h  SoFCDB.cpp  SoFCUnifiedSelection.cpp  SoFCUnifiedSelection.h  SoObjectSeparator.cpp  SoObjectSeparator.h  Tree.cpp  Tree.h  View3DInventor.cpp  View3DInventorViewer.cpp  View3DInventorViewer.h  View3DPy.cpp  View3DPy.h  ViewProvider.cpp  ViewProvider.h  ViewProviderAnnotation.cpp  ViewProviderCacheObject.cpp  ViewProviderCacheObject.h  ViewProviderDocumentObject.cpp  (+15 more)
src/Gui/DAGView/: DAGModel.cpp
src/Gui/Icons/: resource.qrc
src/Gui/Inventor/: SoAutoZoomTranslation.cpp
src/Gui/Quarter/: ImageReader.cpp
src/Gui/TaskView/: TaskDialog.cpp  TaskDialog.h  TaskView.cpp  TaskWatcher.cpp  TaskWatcher.h
src/Mod/: CMakeLists.txt
src/Mod/Assembly/: DevAssembly.py
src/Mod/Assembly/App/: AppAssembly.cpp  CMakeLists.txt  Constraint.cpp  ItemAssembly.h  PreCompiled.h  Product.cpp
src/Mod/Assembly/Gui/: AppAssemblyGui.cpp  CMakeLists.txt  Command.cpp  PreCompiled.h  TaskAssemblyConstraints.cpp  ViewProviderConstraint.cpp  ViewProviderProduct.cpp  ViewProviderProductRef.cpp  ViewProviderProductRef.h
src/Mod/Fem/App/: FemConstraint.cpp
src/Mod/Import/App/: AppImportPy.cpp  CMakeLists.txt  PlmXmlParser.py  (+1 more)
src/Mod/JtReader/: CMakeLists.txt  Examples.py  Init.py  InitGui.py
src/Mod/JtReader/App/: AppJtReader.cpp  AppJtReaderPy.cpp  CMakeLists.txt  JcadLibReader.cpp  JcadLibReader.h  JtFile.cpp  JtFile.h  JtPart.cpp  JtPart.h  JtPartHandle.cpp  JtPartHandle.h  JtPartPy.xml  JtPartPyImp.cpp  PreCompiled.h  TestJtReader.h  TkJtLibReader.cpp  TkJtLibReader.h
src/Mod/JtReader/App/JrJt/: JtReader.cpp  JtReader.h
src/Mod/JtReader/App/TkJt/JtAttribute/: JtAttribute_Base.hxx  JtAttribute_GeometricTransform.hxx  JtAttribute_Material.hxx
src/Mod/JtReader/App/TkJt/JtData/: JtData_FileReader.hxx  JtData_Inflate.hxx  JtData_Message.hxx  JtData_Model.cxx  JtData_Model.hxx  JtData_Object.hxx  JtData_Reader.hxx  JtData_ReaderInterface.hxx  JtData_SingleHandle.hxx  JtData_Types.hxx
src/Mod/JtReader/App/TkJt/JtDecode/: JtDecode_Int32CDP.hxx  JtDecode_Int32CDP_Arithmetic.hxx  JtDecode_Int32CDP_Bitlength.hxx  JtDecode_Int32CDP_Bitlength2.hxx  JtDecode_Int32CDP_Bits.hxx  JtDecode_Int32CDP_Chopper.hxx  JtDecode_Int32CDP_Huffman.hxx  JtDecode_Int32CDP_Null.hxx  JtDecode_MeshCoderDriver.hxx  JtDecode_VertexData.hxx  JtDecode_VertexData_Deering.hxx  JtDecode_VertexData_ExpMant.hxx  JtDecode_VertexData_Quantized.hxx
src/Mod/JtReader/App/TkJt/JtElement/: JtElement_MetaData_PMIManager.cxx  JtElement_MetaData_PMIManager.hxx  JtElement_ShapeLOD_Base.hxx  JtElement_ShapeLOD_TriStripSet.hxx  JtElement_ShapeLOD_Vertex.hxx  JtElement_XTBRep.hxx
src/Mod/JtReader/App/TkJt/JtNode/: JtNode_Base.hxx  JtNode_Group.hxx  JtNode_Instance.hxx  JtNode_LOD.hxx  JtNode_MetaData.hxx  JtNode_Part.hxx  JtNode_Partition.cxx  JtNode_Partition.hxx  JtNode_RangeLOD.hxx  JtNode_Shape_Base.hxx  JtNode_Shape_TriStripSet.hxx  JtNode_Shape_Vertex.hxx
src/Mod/JtReader/App/TkJt/JtProperty/: JtProperty_Base.hxx  JtProperty_LateLoaded.hxx  JtProperty_String.hxx
src/Mod/JtReader/App/TkJt/JtToTopoDS/: JtToTopoDS_Builder.hxx
src/Mod/JtReader/App/jcadlib/: Readme.txt  TestRun.bat
src/Mod/JtReader/Gui/: AppJtReaderGui.cpp  AppJtReaderGuiPy.cpp  CMakeLists.txt  PreCompiled.h  ViewProviderJtPart.cpp  ViewProviderJtPart.h
src/Mod/PartDesign/: CMakeLists.txt  InitGui.py  InvoluteGearFeature.py
src/Mod/Test/: Document.py
(+131 files in other folders)
